[package]
name = "actix-web"
version = "0.1.0"
edition = "2024"

[dependencies]
# Actix
actix-web = "4.11.0"
actix-rt = "2.10.0"

# env var
dotenv = "0.15.0"

# sql
sqlx = { version = "0.8.6", default-features = false, features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono"]}

# serialize
serde = { version = "1.0.219", features = ["derive"]}

chrono = { version = "0.4.41", features = ["serde"]}

openssl = { version = "0.10.72", features = ["vendored"]}